Fix paragraph align

--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,9 @@ body.dark nav ul .sun:hover {
 }
 
 .info-section-text {
-    text-align: right;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
 }
 
 .info-section-text h2 {
